# FKOgreWorldEdit

CollisionSystem/: CollisionSystem.cpp  CollisionSystem.def  CollisionSystem.h  CollisionSystem.sln  CollisionSystem.vcproj  CollisionSystemDll.h  CollisionSystem_d.def  ICollisionEntity.h  ICollisionShape.h  ICollisionSystem.cpp  ICollisionSystem.h  ICollisionWorld.h  OpcodeCollisionBoundingBoxShape.cpp  OpcodeCollisionBoundingBoxShape.h  OpcodeCollisionEntity.cpp  OpcodeCollisionEntity.h  OpcodeCollisionMeshShape.cpp  OpcodeCollisionMeshShape.h  OpcodeCollisionShape.h  OpcodeCollisionSubMeshShape.cpp  OpcodeCollisionSubMeshShape.h  OpcodeCollisionSystem.cpp  OpcodeCollisionSystem.h  OpcodeCollisionVertexShape.cpp  OpcodeCollisionVertexShape.h  OpcodeCollisionWorld.cpp  OpcodeCollisionWorld.h  UpgradeLog.XML  stdafx.cpp  stdafx.h
CollisionSystem/Debug/: CollisionSystem_d.lib
CollisionSystem/Release/: CollisionSystem.lib
DisplayLayer/: AnimationTrackController.cpp  AnimationTrackController.h  AnimationTrackObject.cpp  AnimationTrackObject.h  AnimationTrackObjectVisible.cpp  AnimationTrackObjectVisible.h  BillboardSetObject.cpp  BillboardSetObject.h  BoxTriggerObject.cpp  BoxTriggerObject.h  BoxTriggerObjectVisible.cpp  BoxTriggerObjectVisible.h  CameraObject.cpp  CameraObject.h  CameraObjectVisible.cpp  CameraObjectVisible.h  CharacterObject.cpp  CharacterObject.h  DisplayLayer.cpp  DisplayLayer.def  DisplayLayer.h  DisplayLayer.sln  DisplayLayer.vcproj  DisplayLayerDll.h  DisplayLayer_d.def  DisplaySystem.cpp  DisplaySystem.h  EntityObject.cpp  EntityObject.h  EntityObjectVisible.cpp  EntityObjectVisible.h  EnvironmentObject.cpp  EnvironmentObject.h  EnvironmentObjectVisible.cpp  EnvironmentObjectVisible.h  IScene.h  ISceneObject.h  ISceneObjectVisible.h  ISceneSerializer.h  ISceneSystem.cpp  (+35 more)
DisplayLayer/Debug/: DisplayLayer_d.lib
DisplayLayer/Release/: DisplayLayer.lib
EditableTerrain/: EditableTerrain.sln  EditableTerrain.vcproj  Makefile
EditableTerrain/include/: ETBrush.h  ETIndexHandler.h  ETOptions.h  ETPrerequisites.h  ETSelection.h  ETShowBrush.h  ETSplattingManager.h  ETTerrain.h  ETTerrainImpl.h  ETTerrainInfo.h  ETTile.h  GridVector2.h  SutureRenderable.h
EditableTerrain/src/: ETBrush.cpp  ETIndexHandler.cpp  ETLightmap.cpp  ETLoadSaveHeightmap.cpp  ETPrerequisites.cpp  ETSelection.cpp  ETShowBrush.cpp  ETSplattingManager.cpp  ETTerrain.cpp  ETTerrainImpl.cpp  ETTerrainInfo.cpp  ETTile.cpp  SutureRenderable.cpp
OgrePro/: AnimationStateController.cpp  AnimationStateController.h  ConsoleDebugger.cpp  ConsoleDebugger.h  DecalSystem.cpp  DecalSystem.h  EntityAnimationController.cpp  EntityAnimationController.h  EntityMaterialInstance.cpp  EntityMaterialInstance.h  EntityRtt.cpp  EntityRtt.h  FileHandleDataStreamEx.cpp  FileHandleDataStreamEx.h  GridDecal.cpp  GridDecal.h  IAnimationStateController.h  IDecalSystem.cpp  IDecalSystem.h  IEntityAnimationController.h  MaterialInstance.cpp  MaterialInstance.h  MathEx.cpp  MathEx.h  MeshDecal.cpp  MeshDecal.h  MeshDecalClipper.cpp  MeshDecalClipper.h  MovableText.cpp  MovableText.h  NormalDecal.cpp  NormalDecal.h  OgrePro.cpp  OgrePro.def  OgrePro.h  OgrePro.sln  OgrePro.vcproj  OgreProDll.h  OgrePro_d.def  OrientedBox.cpp  (+22 more)
OgrePro/Debug/: OgrePro_d.lib
OgrePro/Release/: OgrePro.lib
Tools/: CEImagesetEditor.sln  CELayoutEditor.sln
Tools/CEImagesetEditor/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  releasenotes.txt
Tools/CEImagesetEditor/inc/: Config.h  EditorDocument.h  EditorFrame.h  EditorGLCanvas.h  EditorView.h  ElasticBox.h
Tools/CEImagesetEditor/src/: CEImagesetEditor.cpp  DialogAbout.cpp  DialogResourceGroups.cpp  EditorDocument.cpp  EditorFrame.cpp  EditorGLCanvas.cpp  EditorView.cpp  ElasticBox.cpp  ElasticBoxProperties.cpp  ElasticBoxWindowRenderer.cpp  ImagesetHandler.cpp  Makefile.am  PropertiesPanel.cpp  wxPathCellEditor.cpp
Tools/CEImagesetEditor/vc++7.1/: CEImagesetEditor.vcproj
Tools/CEImagesetEditor/vc++8/: CEImagesetEditor.sln  CEImagesetEditor.vcproj  CEImagesetEditor.vcproj.vspscc  e
Tools/CELayoutEditor/: AUTHORS.txt  BuildDocs.bat  ChangeLog.txt  Makefile.am  ProjectRules.txt  bootstrap  configure.ac  doxyfile  installer.iss  readme.txt  releasenotes.txt
Tools/CELayoutEditor/dependencies/iniFile/: iniFile.cpp
Tools/CELayoutEditor/inc/: CELayoutEditor.h  CopiedSelection.h  DialogAddWindow.h  DialogMain.h  EditorCanvas.h  EditorDocument.h  EditorFrame.h  IDocumentObserver.h  Options.h  Selection.h  SelectionMover.h  StringHelper.h  Version.h  WindowBox.h  pch.h
Tools/CELayoutEditor/src/: CELayoutEditor.cpp  CommandAddWindow.cpp  CopiedSelection.cpp  DialogAddWindow.cpp  DialogGrid.cpp  DialogMain.cpp  EditorCanvas.cpp  EditorDocument.cpp  EditorFrame.cpp  ExceptionManager.cpp  Options.cpp  Selection.cpp  SelectionMover.cpp  WindowBox.cpp
Tools/CELayoutEditor/vc++7.1/: CELayoutEditor.rc  CELayoutEditor.sln  CELayoutEditor.vcproj  resource.h
Tools/CELayoutEditor/vc++8/: CELayoutEditor.rc  CELayoutEditor.vcproj
Tools/WorldEditor/: UpgradeLog.XML  WorldEditor.sln
Tools/WorldEditor/Interface/: IChildView.h  IClipboardManager.h  IMainFrame.h  IMapManager.h  IPlugin.h  IPluginManager.h  ISettingManager.h  IWorldEditor.h
Tools/WorldEditor/WorldEditor/: ChildView.cpp  ChildView.h  ClipboardManager.cpp  ClipboardManager.h  DlgPluginManager.cpp  (+21 more)
TriggerSystem/: BoxTriggerEntity.cpp  IBoxTriggerEntity.h  ISphereTriggerEntity.h  ITriggerEntity.h  ITriggerPlayer.cpp  ITriggerPlayer.h  ITriggerSystem.cpp  ITriggerSystem.h  ITriggerWorld.h  OctreeBoxTriggerEntity.cpp  OctreeBoxTriggerEntity.h  OctreeSphereTriggerEntity.cpp  OctreeSphereTriggerEntity.h  OctreeTriggerPlayer.cpp  OctreeTriggerPlayer.h  OctreeTriggerSystem.cpp  OctreeTriggerSystem.h  OctreeTriggerWorld.cpp  OctreeTriggerWorld.h  TriggerSystem.cpp  TriggerSystem.def  TriggerSystem.h  TriggerSystem.sln  TriggerSystem.vcproj  TriggerSystemDll.h  TriggerSystem_d.def  UpgradeLog.XML  clean.bat  stdafx.cpp  stdafx.h
TriggerSystem/Debug/: TriggerSystem_d.lib
TriggerSystem/Release/: TriggerSystem.lib
(+168 files in other folders)
