SUBDIRS=. src

EXTRA_DIST = src/bitmaps/Set_01.zip \
             src/bitmaps/copy.xpm \
             src/bitmaps/cut.xpm \
             src/bitmaps/delete.xpm \
             src/bitmaps/help.xpm \
             src/bitmaps/new.xpm \
             src/bitmaps/open.xpm \
             src/bitmaps/paste.xpm \
             src/bitmaps/save.xpm \
             AUTHORS \
             COPYING \
             ChangeLog \
             INSTALL \
             README

dist_pkgdata_DATA = data/CEImagesetEditor.looknfeel \
                    data/CEImagesetEditor.scheme \
                    data/CEImagesetEditor.imageset \
                    data/CEImagesetEditor.tga
