SUBDIRS=src bin

noinst_HEADERS=  \
				inc/CELayoutEditor.h \
				inc/Config.h \
				inc/CopiedSelection.h \
				inc/DialogAbout.h \
				inc/DialogAddWindow.h \
				inc/DialogMain.h \
				inc/DialogGrid.h \
				inc/EditorCanvas.h \
				inc/EditorDocument.h \
				inc/EditorFrame.h \
				inc/EditorView.h \
				inc/WindowBox.h \
				inc/IDocumentObserver.h \
				inc/Options.h \
				inc/Selection.h \
				inc/SelectionMover.h \
				inc/StringHelper.h \
				inc/WindowContext.h \
				inc/CommandAddWindow.h \
				inc/pch.h \
				dependencies/iniFile/iniFile.h

EXTRA_DIST = src/bitmaps/copy.xpm \
			src/bitmaps/cut.xpm \
			src/bitmaps/delete.xpm \
			src/bitmaps/help.xpm \
			src/bitmaps/icon32.xmp \
			src/bitmaps/icon48.xmp \
			src/bitmaps/lock.xmp \
			src/bitmaps/new.xpm \
			src/bitmaps/open.xpm \
			src/bitmaps/paste.xpm \
			src/bitmaps/save.xpm \
			src/bitmaps/unlock.xmp \
			gpl.txt \
			releasenotes.txt
